Cleanup paho client
Signed-off-by: Guido Grune <g.grune@datainmotion.com>